--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
                             <span>CMA</span>
                         </div>
                         <div class="credential">
-                            <i class="fab fa-youtube"></i>
-                            <span>Content Creator</span>
+                            <a href="https://www.youtube.com/@cacmaronakagrawal" target="_blank" class="credential-link">
+                                <i class="fab fa-youtube"></i>
+                                <span>Content Creator</span>
+                            </a>
                         </div>
                     </div>
                 </div>
